[package]
name = "sms-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
cucumber = "0.19"
actix-web = "4.5.1"

[[test]]
name = "controller_send_sms"
path = "src/controllers/tests/test.rs"
harness = false
